force-app/main/default/objects/Photo__c/Photo__c.object-meta.xml
<CustomObject>
    <description>This object represents Photos records imported from external system.</description>
    <label>Photo</label>
    <nameField>
        <label>Photo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Photo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>