force-app/main/default/objects/Photo__c/fields/Album_Id__c.field-meta.xml
<CustomField>
    <fullName>Album_Id__c</fullName>
    <description>Id of the album containing this photo</description>
    <label>Album Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>