force-app/main/default/objects/Photo__c/fields/Thumbnail_Url__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Url__c</fullName>
    <description>Url for photo thumbnail</description>
    <label>Thumbnail Url</label>
    <type>Url</type>
</CustomField>