force-app/main/default/objects/Photo__c/fields/Title_Trimmed__c.field-meta.xml
<CustomField>
    <fullName>Title_Trimmed__c</fullName>
    <description>Trimmed version of the title</description>
    <inlineHelpText>This field is populated automatically</inlineHelpText>
    <label>Title Trimmed</label>
    <length>33</length>
    <type>Text</type>
</CustomField>