force-app/main/default/objects/Photo__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Url location of the photo</description>
    <label>Url</label>
    <type>Url</type>
</CustomField>